# prefmanager

./: .gitignore  CLAUDE.md  ChangeLog.md  README.md  cabal.project  cabal.project.freeze  constants.nix  default.nix  flake.nix  hie.yaml  package.yaml  prefmanager.cabal  prefmanager.nix  shell.nix  stack.nix  stack.yaml
.github/workflows/: ci.yml  nix.yml
app/: Main.hs
nix/: sources.json
src/: Defaults.hs  Prelude.hs
src/Defaults/: Filter.hs  Plist.hs  Pretty.hs  Types.hs
test/: Main.hs  PlistSpec.hs  PrettySpec.hs
