cabal-version: 2.4

name:           prefmanager
version:        0.2.0.0
synopsis:       A CLI utility for managing macOS preferences
description:    Please see the README on GitHub at <https://github.com/malob/prefmanager#readme>
category:       CLI
homepage:       https://github.com/malob/prefmanager#readme
bug-reports:    https://github.com/malob/prefmanager/issues
author:         Malo Bourgon
maintainer:     mbourgon@gmail.com
copyright:      2020 Malo Bourgon
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type:     git
  location: https://github.com/malob/prefmanager

common shared
  default-language: Haskell2010
  build-depends:
    , base
    , relude
  -- Use Relude as the implicit Prelude in every module.
  -- https://github.com/kowainik/relude#mixins
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
      Defaults
      Defaults.Filter
      Defaults.Pretty
      Defaults.Types
  other-modules:
      Paths_prefmanager
  autogen-modules:
      Paths_prefmanager
  build-depends:
    , ansi-terminal
    , async
    , async-pool
    , containers
    , directory
    , filepath
    , hxt
    , patience
    , plist
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , time
    , typed-process

executable prefmanager
  import:           shared
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
      Paths_prefmanager
  autogen-modules:
      Paths_prefmanager
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , optparse-applicative
    , prefmanager
